@@ -1,17 +1,21 @@
 package com.stylemycloset.weather.processor;
 
 import com.stylemycloset.weather.entity.Humidity;
+import com.stylemycloset.weather.entity.Weather;
 import com.stylemycloset.weather.repository.WeatherRepository;
 import com.stylemycloset.weather.util.WeatherBuilderHelperContext;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.List;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 
 @Component
+@RequiredArgsConstructor
 public class HumidityProcessor implements WeatherCategoryProcessor {
 
-    WeatherRepository repository;
+    private final WeatherRepository repository;
 
     @Override
     public boolean supports(String category) {
@@ -25,8 +29,16 @@ public class HumidityProcessor implements WeatherCategoryProcessor {
         LocalDateTime startOfYesterday = today.minusDays(1).atStartOfDay();
         LocalDateTime endOfYesterday = today.atStartOfDay().minusNanos(1);
 
-        Double yesterday =  repository.findWeathersByForecastedAtYesterday
-            (startOfYesterday,endOfYesterday).get(0).getHumidity().getCurrent();
+        List<Weather> weathers = repository.findWeathersByForecastedAtYesterday(startOfYesterday, endOfYesterday);
+
+        double yesterday;
+        if (weathers.isEmpty()) {
+            yesterday = 0;
+        } else {
+            // 예시: weathers에서 어떤 값을 계산
+            // (실제 계산 로직에 맞게 수정하세요)
+            yesterday = weathers.getFirst().getHumidity().getCurrent();
+        }
         ctx.humidity = new Humidity(current, current-yesterday);
     }
 
